[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/animals/cock.png" type="Texture" id=1]
[ext_resource path="res://scripts/UI/big_menu/big_menu_int_item.gd" type="Script" id=2]

[node name="AnimalMenuItem" type="HBoxContainer"]
margin_right = 737.0
margin_bottom = 58.0
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_right = 119.0
margin_bottom = 58.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="TypeLabel" type="Label" parent="."]
margin_left = 123.0
margin_top = 22.0
margin_right = 243.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Chicken"

[node name="DecreaseButton" type="Button" parent="."]
margin_left = 247.0
margin_right = 366.0
margin_bottom = 58.0
size_flags_horizontal = 3
text = "-"

[node name="NumberLabel" type="Label" parent="."]
margin_left = 370.0
margin_top = 22.0
margin_right = 490.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "0"
align = 1

[node name="IncreaseButton" type="Button" parent="."]
margin_left = 494.0
margin_right = 613.0
margin_bottom = 58.0
size_flags_horizontal = 3
text = "+"

[node name="Pricetag" type="Label" parent="."]
margin_left = 617.0
margin_top = 22.0
margin_right = 737.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "40 NGN"
align = 1

[connection signal="pressed" from="DecreaseButton" to="." method="_on_DecreaseButton_pressed"]
[connection signal="pressed" from="IncreaseButton" to="." method="_on_IncreaseButton_pressed"]
